Bug 1547801 - Correctly handle case-insensitive matching in tag queries for international strings. r=mak

Differential Revision: https://phabricator.services.mozilla.com/D29334

--HG--
extra : moz-landing-system : lando